# pixelart-cleaner

./: .gitignore  CLAUDE.md  README.md  detect.py  detect2.py  detect3.py  pyproject.toml  requirements.txt  resize.py  resize2.py  resize3.py
