[project]
name = "pixelart-cleaner"
version = "0.1.0"
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.scripts]
detect = "detect:main"
resize = "resize:main"

[tool.setuptools]
py-modules = ["detect", "resize"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
